--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Ajibola's Portfolio</h1>
     <h2>I'am a Web developer</h2>
     <hr>
-   <a href="../2.4 Movie Ranking Project/index.html"><h2>Movie Ranking Project</h2><a>
+   <a href="./public/movie-ranking.html"><h2>Movie Ranking Project</h2><a>
     <h1>The Best Movies According to Jimoh</h1>
     <h2>My top 3 movies of all-time.</h2>
     <hr />
